2005-08-31  Roland Dreier  <roland@cisco.com>

	* include/infiniband/kern-abi.h, include/infiniband/verbs.h,
	src/cmd.c, src/device.c, src/ibverbs.h, src/init.c, src/verbs.c,
	examples/asyncwatch.h: Update to handle new kernel ABI for
	avoiding stale asynchronous events.  When a CQ, QP or SRQ is
	destroyed, the kernel reports the number of events it has given to
	userspace, and we wait until we've handled the same number of
	events.

	This does introduce a library API change: consumers are now
	required to call ibv_put_async_event() to release every
	asynchronous event that they retrieve via ibv_get_async_event().

2005-08-30  Roland Dreier  <roland@cisco.com>

	* man/ibv_asyncwatch.1, man/ibv_devices.1, man/ibv_devinfo.1,
	man/ibv_rc_pingpong.1, man/ibv_srq_pingpong.1,
	man/ibv_uc_pingpong.1, man/ibv_ud_pingpong.1: Add man pages for
	example programs.

	* examples/devinfo.c: Merge with Dotan Barak's vstat tool.